# safe-rm

./: Cargo.toml
src/: main.rs
